--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,17 @@
             nzWidth="256px"
             nzBreakpoint="md"
             [(nzCollapsed)]="isCollapsed"
-            [nzTrigger]="null">
-    <div class="sidebar-logo">
+            [nzTrigger]="null"
+            style="background: linear-gradient(90deg, rgba(39,35,40,1) 24%, rgba(151,0,255,1) 100%);">
+    <div class="sidebar-logo" style="background: linear-gradient(90deg, rgba(39,35,40,1) 24%, rgba(151,0,255,1) 100%);">
       <a href="" target="_blank">
         <img src="assets/img/56df1915-f3c9-49ad-a1a6-85dc80dc57df.jpg" alt="logo">
         <h1>Meraki</h1>
       </a>
     </div>
-    <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
-        <ul>
+    <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed" style="background: linear-gradient(90deg, rgba(39,35,40,1) 24%, rgba(151,0,255,1) 100%);">
+      <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard" style="background: linear-gradient(90deg, rgba(39,35,40,1) 24%, rgba(151,0,255,1) 100%);">
+        <ul style="background: linear-gradient(90deg, rgba(39,35,40,1) 24%, rgba(151,0,255,1) 100%);">
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/welcome">Welcome</a>
           </li>
@@ -28,8 +29,8 @@
           </li>
         </ul>
       </li>
-      <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
-        <ul>
+      <li nz-submenu nzOpen nzTitle="Form" nzIcon="form" style="background: linear-gradient(90deg, rgba(39,35,40,1) 24%, rgba(151,0,255,1) 100%);">
+        <ul style="background: linear-gradient(90deg, rgba(39,35,40,1) 24%, rgba(151,0,255,1) 100%);">
           <li nz-menu-item nzMatchRouter>
             <a>Basic Form</a>
           </li>
