--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,7 +25,7 @@
 }
 
 .trigger:hover {
-  color: #1890ff;
+  color: #000;
 }
 
 .sidebar-logo {
@@ -77,4 +77,8 @@ nz-content {
   padding: 24px;
   background: #fff;
   height: 100%;
+}
+
+.ant-menu-dark .ant-menu-inline.ant-menu-sub {
+  background: #000000;
 }
