--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
             <a>Propietarios</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a>Propietarios</a>
+            <a routerLink="/Vehiculos">Vehiculos</a>
           </li>
         </ul>
       </li>
