--- a/src/app/Modulos/vehiculos/listar-vehiculo/listar-vehiculo.component.html
+++ b/src/app/Modulos/vehiculos/listar-vehiculo/listar-vehiculo.component.html
@@ -1,53 +1,13 @@
 <div class="container">
   <h1>Lista de vehiculos</h1>
-  <h3><a href="Vehiculos/Crear">Agregar vehiculo</a></h3>
+  <h3><a href="vehiculos/crearVehiculo">Agregar vehiculo</a></h3>
   <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
+    <div class="col" *ngFor='let item of servicioVehiculo.listaVehiculos'>
       <div class="card h-100">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">{{ item.CodigoV }}</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted"><a href="Conductor/Agregar/" routerLink=''> Agregar conductor </a></small> &nbsp;
-          <small class="text-muted"><a href="Vehiculo/Editar/" routerLink=''> Editar vehiculo</a></small> &nbsp;
-          <small class="text-muted">Eliminar Vehiculo</small> &nbsp;
-          <small class="text-muted"><a href="Vehiculo/Detalle/" routerLink=''> Detalle del vehiculo</a></small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a short card.</p>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted"><a href="Conductor/Agregar/" routerLink=''> Agregar conductor </a></small> &nbsp;
-          <small class="text-muted"><a href="Vehiculo/Editar/" routerLink=''> Editar vehiculo</a></small> &nbsp;
-          <small class="text-muted">Eliminar Vehiculo</small> &nbsp;
-          <small class="text-muted"><a href="Vehiculo/Detalle/" routerLink=''> Detalle del vehiculo</a></small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">An item</li>
             <li class="list-group-item">A second item</li>
