--- a/src/app/Modulos/vehiculos/listar-vehiculo/listar-vehiculo.component.html
+++ b/src/app/Modulos/vehiculos/listar-vehiculo/listar-vehiculo.component.html
@@ -4,21 +4,21 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col" *ngFor='let item of servicioVehiculo.listaVehiculos'>
       <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="assets/img/{{ item.FotoV }}" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">{{ item.CodigoV }}</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Codigo: {{ item.CodigoV }}</h5>
+          <p class="card-text">Marca: {{ item.NombreMarca }}</p>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
+            <li class="list-group-item"></li>
             <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">Tipo Vehiculo: {{ item.Descripcion }}</li>
+            <li class="list-group-item"><button class="btn btn-outline-info" (click)="CambiarEstado(item.CodigoV)">Cambias estado</button> </li>
           </ul>
         </div>
         <div class="card-footer">
           <small class="text-muted"><a href="Conductor/Agregar/" routerLink=''> Agregar conductor </a></small> &nbsp;
-          <small class="text-muted"><a href="Vehiculo/Editar/" routerLink=''> Editar vehiculo</a></small> &nbsp;
-          <small class="text-muted">Eliminar Vehiculo</small> &nbsp;
-          <small class="text-muted"><a href="Vehiculo/Detalle/" routerLink=''> Detalle del vehiculo</a></small>
+          <small class="text-muted"><a href="vehiculos/Editar/" routerLink=''> Editar vehiculo</a></small> &nbsp;
+          <small class="text-muted"><a href="vehiculos/detalle/{{ item.CodigoV }}">Detalle vehiculo</a></small>
         </div>
       </div>
     </div>
