Me quiero morir

--- a/src/app/Modulos/login/registro-usuario/registro-usuario.component.html
+++ b/src/app/Modulos/login/registro-usuario/registro-usuario.component.html
@@ -50,22 +50,22 @@
       </div>
 
       <div class="form-field col-lg-4">
-        <input id="celular" class="input-text" type="text" name="">
+        <input  class="input-text" type="text" name="">
         <label for="celular" class="label">Apellido</label>
       </div>
 
        <div class="form-field col-lg-4">
-        <input id="celular" class="input-text" type="email" name="">
+        <input  class="input-text" type="email" name="">
         <label for="celular" class="label">Correo</label>
       </div>
 
       <div class="form-field col-lg-6">
-        <input id="celular" class="input-text" type="text" name="">
+        <input  class="input-text" type="text" name="">
         <label for="celular" class="label">Dirección</label>
       </div>
 
       <div class="form-field col-lg-6">
-        <input id="celular" class="input-text" type="number" name="">
+        <input  class="input-text" type="number" name="">
         <label for="celular" class="label">Celular</label>
       </div>
 
