--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
             <a routerLink="/welcome">Welcome</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/clientes">Clientes</a>
+            <a routerLink="/usuarios">Usuarios</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a>Propietarios</a>
